# patate-chaude

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
