[package]
name = "shared"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


autocfg = "1.1.0"
cfg-if = "1.0.0"
chrono = "0.4.19"
fuchsia-cprng = "0.1.1"
gcc = "0.3.55"
getrandom = "0.2.6"
itoa = "1.0.1"
libc = "0.2.125"
log = "0.4.17"
md5 = "0.7.0"
num-integer = "0.1.45"
num-traits = "0.2.15"
ppv-lite86 = "0.2.16"
proc-macro2 = "1.0.37"
quote = "1.0.18"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
rand_hc = "0.3.1"
rdrand = "0.8.2"
rust-crypto = "0.2.36"
rust-hashcash = "0.3.3"
rustc-serialize = "0.3.24"
ryu = "1.0.9"
serde = {version = "1.0.137", features = ["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0.81"
simpl = "0.1.0"
syn = "1.0.92"
time = "0.3.9"
wasi = "0.11.0+wasi-snapshot-preview1"
winapi = "0.3.9"
winapi-i686-pc-windows-gnu = "0.4.0"
winapi-x86_64-pc-windows-gnu = "0.4.0"
